media/radarr.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: radarr
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        disktype: nfs
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-pvc-config
        - name: radarr-downloads
          persistentVolumeClaim:
            claimName: radarr-pvc-downloads
        - name: radarr-library
          persistentVolumeClaim:
            claimName: radarr-pvc-library
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Asia/Jerusalem
          image: ghcr.io/linuxserver/radarr:6.0.4.10291-ls290
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 30
            periodSeconds: 5
          name: radarr
          ports:
            - containerPort: 7878
              name: webui
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /config
              name: radarr-config
            - mountPath: /downloads
              name: radarr-downloads
            - mountPath: /movies
              name: radarr-library
      restartPolicy: Always
