media/sonarr.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: sonarr
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        disktype: nfs
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-pvc-config
        - name: sonarr-downloads
          persistentVolumeClaim:
            claimName: sonarr-pvc-downloads
        - name: sonarr-library
          persistentVolumeClaim:
            claimName: sonarr-pvc-library
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Asia/Jerusalem
          image: ghcr.io/linuxserver/sonarr:4.0.17.2952-ls311
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          name: sonarr
          ports:
            - containerPort: 8989
              name: webui
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 768Mi
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /config
              name: sonarr-config
            - mountPath: /downloads
              name: sonarr-downloads
            - mountPath: /tv
              name: sonarr-library
      restartPolicy: Always
