media/bazarr.service.yml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  labels:
    app: bazarr
  namespace: media
spec:
  selector:
    app: bazarr
  ports:
    - port: 6767
      protocol: TCP
      targetPort: 6767
      name: webui
