media/media.service.yml
apiVersion: v1
kind: Service
metadata:
  name: plex-svc
  namespace: media
  labels:
    app: plex
spec:
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: 32400
      protocol: TCP
      name: pms-web
    - port: 1900
      targetPort: 1900
      protocol: UDP
      name: dlna-udp
    - port: 3005
      targetPort: 3005
      protocol: TCP
      name: plex-companion
    - port: 5353
      targetPort: 5353
      protocol: UDP
      name: discovery-udp
    - port: 8324
      targetPort: 8324
      protocol: TCP
      name: plex-roku
    - port: 32410
      targetPort: 32410
      protocol: UDP
      name: gdm-32410
    - port: 32412
      targetPort: 32412
      protocol: UDP
      name: gdm-32412
    - port: 32413
      targetPort: 32413
      protocol: UDP
      name: gdm-32413
    - port: 32414
      targetPort: 32414
      protocol: UDP
      name: gdm-32414
    - port: 32469
      targetPort: 32469
      protocol: TCP
      name: dlna-tcp
  type: LoadBalancer
