media/sonarr.service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
    - port: 8989
      protocol: TCP
      targetPort: 8989
      name: webui
