media/bazarr.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: media
  name: bazarr
spec:
  rules:
  - host: bazarr.home.amitd.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              name: webui
