media/overseerr.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: media
  name: overseerr
spec:
  rules:
  - host: overseerr.home.amitd.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr
            port:
              name: webui
