media/transmission.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: media
  name: transmission
spec:
  rules:
  - host: transmission.arloz.dahan.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission
            port:
              name: webui
